--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -8,26 +8,44 @@
 
 <body class="background">
 	<h1>My First Project</h1>
+
+	<!-- ROW 1 -->
 	<div class="row">
 		<div class="column">
 			<img src="images1/grid-1.jpg">
+			<div class="p1">The Mind</div>
+			<div class="p2">Photoshop, Print Design</div>
 		</div>
+		
 		<div class="column">
 			<img src="images1/grid-2.jpg">
+			<div class="p1">The Police</div>
+			<div class="p2">Illustration, Icons</div>
 		</div>
+		
 		<div class="column">
 			<img src="images1/grid-3.jpg">
+			<div class="p1">The Glasses</div>
+			<div class="p2">Typography, Illustration</div>
 		</div>
-	</div>
-	<div class="row">
+
+	<!-- ROW 2 -->
 		<div class="column">
 			<img src="images1/grid-4.jpg">
+			<div class="p1">The Mustache</div>
+			<div class="p2">Photoshop, Icons</div>
 		</div>
+		
 		<div class="column">
 			<img src="images1/grid-5.jpg">
+			<div class="p1">The Leaf</div>
+			<div class="p2">Icons, Print Design</div>
 		</div>
+		
 		<div class="column">
 			<img src="images1/grid-6.jpg">
+			<div class="p1">The Shield</div>
+			<div class="p2">Illustration, Icons</div>
 		</div>
 	</div>
 </body>
