--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -13,39 +13,51 @@
 	<div class="row">
 		<div class="column">
 			<img src="images1/grid-1.jpg">
-			<div class="p1">The Mind</div>
-			<div class="p2">Photoshop, Print Design</div>
+			<div class="textbox">
+				<div class="p1">The Mind</div>
+				<div class="p2">Photoshop, Print Design</div>
+			</div>
 		</div>
 		
 		<div class="column">
 			<img src="images1/grid-2.jpg">
-			<div class="p1">The Police</div>
-			<div class="p2">Illustration, Icons</div>
+			<div class="textbox">
+				<div class="p1">The Police</div>
+				<div class="p2">Illustration, Icons</div>
+			</div>
 		</div>
 		
 		<div class="column">
 			<img src="images1/grid-3.jpg">
-			<div class="p1">The Glasses</div>
-			<div class="p2">Typography, Illustration</div>
+			<div class="textbox">
+				<div class="p1">The Glasses</div>
+				<div class="p2">Typography, Illustration</div>
+			</div>
 		</div>
 
 	<!-- ROW 2 -->
 		<div class="column">
 			<img src="images1/grid-4.jpg">
-			<div class="p1">The Mustache</div>
-			<div class="p2">Photoshop, Icons</div>
+			<div class="textbox">
+				<div class="p1">The Mustache</div>
+				<div class="p2">Photoshop, Icons</div>
+			</div>
 		</div>
 		
 		<div class="column">
 			<img src="images1/grid-5.jpg">
-			<div class="p1">The Leaf</div>
-			<div class="p2">Icons, Print Design</div>
+			<div class="textbox">
+				<div class="p1">The Leaf</div>
+				<div class="p2">Icons, Print Design</div>
+			</div>
 		</div>
 		
 		<div class="column">
 			<img src="images1/grid-6.jpg">
-			<div class="p1">The Shield</div>
-			<div class="p2">Illustration, Icons</div>
+			<div class="textbox">
+				<div class="p1">The Shield</div>
+				<div class="p2">Illustration, Icons</div>
+			</div>
 		</div>
 	</div>
 </body>
