struggling to insert image in background

--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -36,33 +36,36 @@
 	</div>
 	
 	<!-- FEATURED SERVICES -->
-	<div class="container-fluid" style="background: #f2f2f2; padding: 20px">
-		FEATURED SERVICES
-		<div class="row featuredservices">
+	<div class="container-fluid featuredcontainer" >
+		<div class="featuredtitle">
+			<h1>FEATURED SERVICES</h1>
+			Generate looks reasonable is therefore always
+		</div>
+		<div class="row rounded">
 			<div class="col-3">
 				<img src="images2/img1.png">
-				<h4>30+ TEMPLATES</h4>
+				<h5>30+ TEMPLATES</h5>
 				<p>
 					The cities of the discovered the source comes from sections
 				</p>
 			</div>
-			<div class="col-3" style="border: 1px solid #000000">
+			<div class="col-3">
 				<img src="images2/img2.png">
-				<h4>MULTI PURPOSE</h4>
+				<h5>MULTI PURPOSE</h5>
 				<p>
 					The cities of the discovered the source comes from sections
 				</p>
 			</div>
 			<div class="col-3">
 				<img src="images2/img3.png" >
-				<h4>RESPONSIVE USE</h4>
+				<h5>RESPONSIVE USE</h5>
 				<p>
 					The cities of the discovered the source comes from sections
 				</p>
 			</div>
 			<div class="col-3">
 				<img src="images2/img4.png">
-				<h4>TONS OF FEATURES</h4>
+				<h5>TONS OF FEATURES</h5>
 				<p>
 					The cities of the discovered the source comes from sections
 				</p>
@@ -71,11 +74,20 @@
 	</div>
 
 	<!-- BEFORE FOOTER -->
+	<div class="row beforefooter">
+		find out how AUST CSE can help you
+	</div>
+	<!--
 	<img src="images2/ddg-bg.jpg" class="img-fluid" style="width: 100%">
+	<div class="centered">
+		FIND OUT HOW
+		<h1>AUST CSE CAN HELP YOU</h1>
+	</div>
+	-->
 
 	<!-- FOOTER -->
-	<div class="container-fluid header">
-		2018 AUST CSE 3.1, All Rights Reserved
+	<div class="container-fluid footer">
+		&copy 2018 AUST CSE 3.1, All Rights Reserved
 	</div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
