--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css2/bootstrap.min.css" />
     <link rel="stylesheet" href="css2/main.css" />
 
-    <title>Bootstrap</title>
+    <title>160204075</title>
 </head>
 <body>
 	<!-- THE HEADER -->
@@ -23,8 +23,9 @@
 	<!-- EMAIL, WEBSITE, SHORTCODES -->
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-4">
-				email marketing
+			<div class="col-4" style="background: green;">
+				<img src="images2/icon-1.png">
+				<h5>E-MAIL MARKETING</h5>
 			</div>
 			<div class="col-4">
 				website project
@@ -73,10 +74,11 @@
 		</div>
 	</div>
 
-	<!-- BEFORE FOOTER -->
+<!-- BEFORE FOOTER 
 	<div class="row beforefooter">
 		find out how AUST CSE can help you
 	</div>
+-->
 	<!--
 	<img src="images2/ddg-bg.jpg" class="img-fluid" style="width: 100%">
 	<div class="centered">
